@@ -72,5 +72,5 @@
 {
 	Name "Comet Borrelly"
 	Target "Sol/Borrelly"
-	Description "One September 22, 2001, Comet Borrelly became the second comet to be imaged at close range by a spacecraft.  Despite not being designed for a comet flyby, Deep Space 1 approached within 2200 kilometers of the Borrelly's nucleus to return the highest resolution pictures we have of a cometary cire."
+	Description "One September 22, 2001, Comet Borrelly became the second comet to be imaged at close range by a spacecraft.  Despite not being designed for a comet flyby, Deep Space 1 approached within 2200 kilometers of the Borrelly's nucleus to return the highest resolution pictures we have of a cometary core."
 }
